webpage semi functional

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="../Style.css">
+        <link rel="stylesheet" type="text/css" href="Style.css">
     </head>
+
     <body>
         <div class="navbar">
             <div class="navleft">
 
-                <div class="dropdown">
                     <a href="../index.html">Home</a>
+
+                <div class="dropdown">
                     <button class="dropbtn"> placeholder  </button>
                     <div class="dropdown-content">
                         <a href="../4.html"> 4 </a>
@@ -38,19 +40,19 @@
                             <a href="../1.html"> 1 </a>
                         </div>
                     </div> 
-
-        
             </div>
-                <div class ="navright">
-                    <a href="../placeholder" class="button">Login</a>
-                    <a href="../placeholder" class="nav-link">Sign up</a>
+
+                <div class ="navright" id="navright">
+                    <a href="login.html" class="button">Login</a>
+                    <a href="signin.html" class="nav-link">Sign up</a>
                 </div>
         </div>
 
-                <div class="content">
+                <div class="bodycontent">
                     <h1> Welcome to FBLA Web Development! </h1>
                     <p> This is a placeholder.</p>
                 </div>
         
+        <script src="scripts/main.js" defer></script>
     </body>
 </html>
