--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <div class="navbar">
             <div class="navleft">
 
+                <a href="../index.html">Home</a>
+
+                <button class="dropbtn"> placeholder  </button>
                     <a href="../index.html">Home</a>
 
                 <div class="dropdown">
