--- a/login.html
+++ b/login.html
@@ -6,6 +6,17 @@
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
+
+<body>
+
+        <div class="navbar">
+            <div class="navleft">
+                <a href="../index.html">Home</a>
+            </div>
+        </div>
+        
+</body>
+
 <body>
 
     <div class="signinbox">
