--- a/signin.html
+++ b/signin.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    <link rel="stylesheet" type="text/css" href="Style.css">
-</head>
-<body>
-    <div class="signinbox">
-        <h1>Sign Up</h1>
-        <form id="signupForm" novalidate>
-            <label for="username">Username</label>
-            <input id="username" name="username" type="text" placeholder="Enter username" required>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sign Up</title>
+        <link rel="stylesheet" type="text/css" href="Style.css">
+    </head>
 
-            <label for="password">Password</label>
-            <input id="password" name="password" type="password" placeholder="Enter password" required>
+    <body>
+        <div class="navbar">
+            <div class="navleft">
+                <a href="index.html">Home</a>
+            </div>
+        </div>
 
-            <label for="confirm">Confirm Password</label>
-            <input id="confirm" name="confirm" type="password" placeholder="Confirm password" required>
+        <div class="signinbox">
+            <h1>Sign Up</h1>
+            <form id="signupForm" novalidate>
+                <label for="username">Username</label>
+                <input id="username" name="username" type="text" placeholder="Enter username" required>
 
-            <div class="form-message" aria-live="polite"></div>
-            <input type="submit" value="Sign Up" class="primary-btn">
-            <p class="small"><a href="login.html">Already have an account? Log in</a></p>
-        </form>
-    </div>
+                <label for="password">Password</label>
+                <input id="password" name="password" type="password" placeholder="Enter password" required>
 
-    <script src="scripts/main.js" defer></script>
-</body>
+                <label for="confirm">Confirm Password</label>
+                <input id="confirm" name="confirm" type="password" placeholder="Confirm password" required>
+
+                <div class="form-message" aria-live="polite"></div>
+                <input type="submit" value="Sign Up" class="primary-btn">
+                <p class="small"><a href="login.html">Already have an account? Log in</a></p>
+            </form>
+        </div>
+
+        <script src="scripts/main.js" defer></script>
+    </body>
 </html>
